# postgres-evm

./: .gitignore  Cargo.toml  README.md  config.toml.example
admin-cli/: Cargo.toml
admin-cli/examples/: fund_accounts.sh
admin-cli/src/: main.rs
block-producer/: Cargo.toml
block-producer/src/: main.rs
examples/: .env-example  deploy-erc20.js  deploy-minimal-test.js  package.json  send.js  test-simple-transaction.js
migrations/: V1__initial_schema.sql
src/: config.rs  db.rs  errors.rs  evm.rs  lib.rs  logging.rs  main.rs  models.rs  rpc.rs  state.rs  utils.rs
