[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres-evm = { path = ".." }
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.3", features = ["derive"] }
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1"] }
deadpool-postgres = "0.10.5"
primitive-types = { version = "0.12.1", features = ["serde"] }
serde_json = "1.0.96"
hex = "0.4.3"