[package]
name = "block-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres-evm = { path = ".." }
tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1"] }
deadpool-postgres = "0.10.5"
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ethers-core = "2.0.7"
chrono = { version = "0.4.26", features = ["serde"] }
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
futures = "0.3.28"
primitive-types = { version = "0.12.1", features = ["serde"] }